--- a/charts/plex/templates/config-volume.yaml
+++ b/charts/plex/templates/config-volume.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: synology-iscsi-storage
+  storageClassName: synology-iscsi
   resources:
     requests:
       storage: 15Gi
