--- a/charts/plex/values.yaml
+++ b/charts/plex/values.yaml
@@ -1,16 +1,3 @@
-global:
-  enabled: true
-
-cluster:
-  top_level_domain: example.com
-  name: my-cluster
-  admin_email: YOUR_EMAIL
-
-media:
-  nfs:
-    server: your_nas
-    path: /volume1/kubernetes/data
-
 app-template:
   controllers:
     main:
@@ -84,7 +71,7 @@ app-template:
         #   }
         route.openshift.io/termination: "edge"
       hosts:
-        - host: &host "plex.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
+        - host: &host "your_host"
           paths:
             - path: /
               pathType: Prefix
