--- a/charts/hajimari/templates/rbac.yaml
+++ b/charts/hajimari/templates/rbac.yaml
@@ -1,7 +1,15 @@
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: hajimari
+  namespace: default
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: hajimari
+  namespace: default
 rules:
 - apiGroups: ["", "extensions", "networking.k8s.io", "discovery.k8s.io"]
   resources: ["ingresses", "namespaces", "endpointslices"]
@@ -14,6 +22,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: hajimari
+  namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
