--- a/deploy/dev/templates/home-forecastle.yaml
+++ b/deploy/dev/templates/home-forecastle.yaml
@@ -11,7 +11,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/hajimari
+    path: charts/forecastle
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
