--- a/charts/forecastle/values.yaml
+++ b/charts/forecastle/values.yaml
@@ -4,6 +4,7 @@ forecastle:
       enabled: true
       annotations: {}
       additionalLabels: {}
+      name: "www"
       port:
         targetPort: http
       wildcardPolicy: None
@@ -11,4 +12,5 @@ forecastle:
         termination: edge
         insecureEdgeTerminationPolicy: Redirect
     config:
-      namespaceSelector: {}
+      namespaceSelector:
+        - default
