--- a/charts/plex/values.yaml
+++ b/charts/plex/values.yaml
@@ -58,7 +58,7 @@ app-template:
       enabled: true
       annotations:
         forecastle.stakater.com/expose: "true"
-        forecastle.stakater.com/icon: "https://github.com/stakater/ForecastleIcons/blob/master/alert-manager.png"
+        forecastle.stakater.com/icon: "https://raw.githubusercontent.com/stakater/ForecastleIcons/master/alert-manager.png"
         forecastle.stakater.com/group: "Media"
         # kubernetes.io/ingress.class: nginx
         # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
