--- a/charts/plex/values.yaml
+++ b/charts/plex/values.yaml
@@ -58,7 +58,7 @@ app-template:
       enabled: true
       annotations:
         forecastle.stakater.com/expose: "true"
-        forecastle.stakater.com/icon: "https://raw.githubusercontent.com/stakater/ForecastleIcons/master/alert-manager.png"
+        forecastle.stakater.com/icon: "https://upload.wikimedia.org/wikipedia/commons/7/7b/Plex_logo_2022.svg"
         forecastle.stakater.com/appName: "Plex"
         forecastle.stakater.com/group: "Media"
         # kubernetes.io/ingress.class: nginx
