--- a/deploy/dev/templates/home-forecastle.yaml
+++ b/deploy/dev/templates/home-forecastle.yaml
@@ -23,7 +23,7 @@ spec:
         - name: cluster.admin_email
           value: {{ .Values.cluster.admin_email }}
         - name: 'forecastle.forecastle.route.host'
-          value: www.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+          value: apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   syncPolicy:
     automated:
       selfHeal: true
