--- a/charts/sonarr/templates/data-volume.yaml
+++ b/charts/sonarr/templates/data-volume.yaml
@@ -1,29 +1,29 @@
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-volume
-spec:
-  storageClassName: ""
-  capacity:
-    storage: 1Mi
-  accessModes: ["ReadWriteMany"]
-  persistentVolumeReclaimPolicy: Retain
-  nfs:
-    server: {{ .Values.media.nfs.server }}
-    path: {{ .Values.media.nfs.path }}
-  mountOptions:
-    - nfsvers=4.1
-    - nconnect=8
-    - hard
-    - noatime
-    - rsize=131072
-    - wsize=131072
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: sonarr-data-volume
+# spec:
+#   storageClassName: ""
+#   capacity:
+#     storage: 1Mi
+#   accessModes: ["ReadWriteMany"]
+#   persistentVolumeReclaimPolicy: Retain
+#   nfs:
+#     server: {{ .Values.media.nfs.server }}
+#     path: {{ .Values.media.nfs.path }}
+#   mountOptions:
+#     - nfsvers=4.1
+#     - nconnect=8
+#     - hard
+#     - noatime
+#     - rsize=131072
+#     - wsize=131072
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: data-volume
+  name: sonarr-data-volume
   namespace: media
 spec:
   accessModes: ["ReadWriteMany"]
