--- a/charts/sonarr/templates/scc.yaml
+++ b/charts/sonarr/templates/scc.yaml
@@ -1,15 +1,15 @@
-# ---
-# kind: SecurityContextConstraints
-# apiVersion: security.openshift.io/v1
-# metadata:
-#   name: plex-scc
-# fsGroup:
-#   type: RunAsAny
-# runAsUser:
-#   type: RunAsAny
-# seLinuxContext:
-#   type: RunAsAny
-# supplementalGroups:
-#   type: RunAsAny
-# users:
-# - system:serviceaccount:media:plex-sa
+---
+kind: SecurityContextConstraints
+apiVersion: security.openshift.io/v1
+metadata:
+  name: sonarr-scc
+fsGroup:
+  type: RunAsAny
+runAsUser:
+  type: RunAsAny
+seLinuxContext:
+  type: RunAsAny
+supplementalGroups:
+  type: RunAsAny
+users:
+- system:serviceaccount:media:sonarr-sa
