--- a/charts/sonarr/templates/service-account.yaml
+++ b/charts/sonarr/templates/service-account.yaml
@@ -1,6 +1,6 @@
-# ---
-# apiVersion: v1
-# kind: ServiceAccount
-# metadata:
-#   name: plex-sa
-#   namespace: media
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: sonarr-sa
+  namespace: media
