fix kavita config path

--- a/charts/kavita/values.yaml
+++ b/charts/kavita/values.yaml
@@ -46,6 +46,7 @@ app-template:
     config:
       enabled: true
       existingClaim: kavita-config
+      mountPath: /kavita/config
 
     data:
       enabled: true
