fix kavita config path 2

--- a/charts/kavita/values.yaml
+++ b/charts/kavita/values.yaml
@@ -46,7 +46,8 @@ app-template:
     config:
       enabled: true
       existingClaim: kavita-config
-      mountPath: /kavita/config
+      globalMounts:
+      - path: /kavita/config
 
     data:
       enabled: true
