--- a/charts/tautulli/templates/config-volume.yaml
+++ b/charts/tautulli/templates/config-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: tatulli-config
+  name: tautulli-config
   namespace: media
 spec:
   accessModes:
