--- a/charts/overseerr/values.yaml
+++ b/charts/overseerr/values.yaml
@@ -46,6 +46,8 @@ app-template:
     config:
       enabled: true
       existingClaim: overseerr-config
+      globalMounts:
+        - path: /app/config
 
     data:
       enabled: true
