--- a/charts/gaps/templates/data-volume.yaml
+++ b/charts/gaps/templates/data-volume.yaml
@@ -25,8 +25,8 @@ kind: PersistentVolumeClaim
 metadata:
   name: gaps-data-volume
   namespace: media
-  annotations:
-    kasten/backup: "false"
+  labels:
+    kasten/backup: false
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
