--- a/charts/sonarr/templates/data-volume.yaml
+++ b/charts/sonarr/templates/data-volume.yaml
@@ -26,7 +26,7 @@ metadata:
   name: sonarr-data-volume
   namespace: media
   labels:
-    kasten/backup: false
+    kasten/backup: "false"
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
