--- a/charts/tautulli/templates/data-volume.yaml
+++ b/charts/tautulli/templates/data-volume.yaml
@@ -26,7 +26,7 @@ metadata:
   name: tautulli-data-volume
   namespace: media
   labels:
-    kasten/backup: false
+    kasten/backup: "false"
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
