--- a/charts/lidarr/templates/config-volume.yaml
+++ b/charts/lidarr/templates/config-volume.yaml
@@ -3,7 +3,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: lidarr-config
-  namespace: media
+  labels:
+    kasten/backup: "true"
 spec:
   accessModes:
     - ReadWriteOnce
