--- a/deploy/dev/templates/media-lidarr.yaml
+++ b/deploy/dev/templates/media-lidarr.yaml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: media
+    namespace: lidarr
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
