--- a/deploy/dev/templates/media-tautulli.yaml
+++ b/deploy/dev/templates/media-tautulli.yaml
@@ -7,6 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
+    namespace: tautulli
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
