fix scc namespaces

--- a/charts/gaps/templates/scc.yaml
+++ b/charts/gaps/templates/scc.yaml
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:media:gaps-sa
+- system:serviceaccount:{{.Release.Namespace}}:gaps-sa
