--- a/charts/kavita/templates/scc.yaml
+++ b/charts/kavita/templates/scc.yaml
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:media:kavita-sa
+- system:serviceaccount:{{.Release.Namespace}}:kavita-sa
