--- a/charts/prowlarr/templates/scc.yaml
+++ b/charts/prowlarr/templates/scc.yaml
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:media:prowlarr-sa
+- system:serviceaccount:{{.Release.Namespace}}:prowlarr-sa
