--- a/charts/bazarr/templates/scc.yaml
+++ b/charts/bazarr/templates/scc.yaml
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:media:bazarr-sa
+- system:serviceaccount:{{.Release.Namespace}}:bazarr-sa
