--- a/charts/overseerr/templates/scc.yaml
+++ b/charts/overseerr/templates/scc.yaml
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:media:overseerr-sa
+- system:serviceaccount:{{.Release.Namespace}}:overseerr-sa
