--- a/charts/plex/templates/scc.yaml
+++ b/charts/plex/templates/scc.yaml
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:media:plex-sa
+- system:serviceaccount:{{.Release.Namespace}}:plex-sa
