--- a/charts/radarr/templates/scc.yaml
+++ b/charts/radarr/templates/scc.yaml
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:media:radarr-sa
+- system:serviceaccount:{{.Release.Namespace}}:radarr-sa
