--- a/charts/sonarr/templates/scc.yaml
+++ b/charts/sonarr/templates/scc.yaml
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:media:sonarr-sa
+- system:serviceaccount:{{.Release.Namespace}}:sonarr-sa
