--- a/charts/tautulli/templates/scc.yaml
+++ b/charts/tautulli/templates/scc.yaml
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:media:tautulli-sa
+- system:serviceaccount:{{.Release.Namespace}}:tautulli-sa
