changed skip nfs volume label

--- a/charts/kavita/templates/data-volume.yaml
+++ b/charts/kavita/templates/data-volume.yaml
@@ -25,7 +25,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: kavita-data-volume
   labels:
-    kasten/backup: "false"
+    kasten/backup: "skip"
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
