--- a/charts/readarr/templates/data-volume.yaml
+++ b/charts/readarr/templates/data-volume.yaml
@@ -25,7 +25,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: readarr-data-volume
   labels:
-    kasten/backup: "false"
+    kasten/backup: "skip"
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
