--- a/charts/overseerr/templates/data-volume.yaml
+++ b/charts/overseerr/templates/data-volume.yaml
@@ -25,7 +25,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: overseerr-data-volume
   labels:
-    kasten/backup: "skip"
+    kasten/skip: "true"
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
