--- a/charts/prowlarr/templates/data-volume.yaml
+++ b/charts/prowlarr/templates/data-volume.yaml
@@ -25,7 +25,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: prowlarr-data-volume
   labels:
-    kasten/backup: "skip"
+    kasten/skip: "true"
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
