--- a/charts/democratic-csi/values.yaml
+++ b/charts/democratic-csi/values.yaml
@@ -98,14 +98,14 @@ democratic-csi:
           dev_attribs:
           - dev_attrib: emulate_tpws
             enable: 0
-          - dev_attrib: emulate_caw
-            enable: 0
-          - dev_attrib: emulate_3pc
-            enable: 0
+          # - dev_attrib: emulate_caw
+          #   enable: 1
+          # - dev_attrib: emulate_3pc
+          #   enable: 1
           - dev_attrib: emulate_tpu
-            enable: 0
-          - dev_attrib: can_snapshot
             enable: 1
+          # - dev_attrib: can_snapshot
+          #   enable: 1
 
           # btfs thick provisioning
           # only zeroing and locking supported
