--- a/deploy/dev/templates/downloading-sabnzbd.yaml
+++ b/deploy/dev/templates/downloading-sabnzbd.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: media-sabnzbd
+  name: downloading-sabnzbd
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
