--- a/deploy/dev/values.yaml
+++ b/deploy/dev/values.yaml
@@ -33,3 +33,8 @@ media:
   nfs:
     server: my-nas
     path: /mnt/nfs
+
+network:
+  startIP: 192.168.64.55
+  endIP: 192.168.64.59
+  plexIP: 192.168.64.49
