--- a/deploy/dev/templates/media-plex.yaml
+++ b/deploy/dev/templates/media-plex.yaml
@@ -38,7 +38,7 @@ spec:
           value: http
         - name: 'app-template.ingress.main.hosts[0].paths[0].service.identifier'
           value: main
-        - name: 'app-template.service.main.annotations["metallb.universe.tf/loadBalancerIPs"]'
+        - name: app-template.service.main.annotations["metallb.universe.tf/loadBalancerIPs"]
           value: {{ .Values.network.plexIP }}
   syncPolicy:
     automated:
