--- a/deploy/dev/templates/media-plex.yaml
+++ b/deploy/dev/templates/media-plex.yaml
@@ -38,8 +38,8 @@ spec:
           value: http
         - name: 'app-template.ingress.main.hosts[0].paths[0].service.identifier'
           value: main
-        - name: 'app-template.service.main.annotations.metallb.universe.tf/loadBalancerIPs'
-          value: {{ .Values.network.plexIP }}
+        - name: 'app-template.service.main.loadBalancerIP'
+          value: '&lbip {{ .Values.network.plexIP }}'
   syncPolicy:
     automated:
       selfHeal: true
