--- a/deploy/dev/templates/media-plex.yaml
+++ b/deploy/dev/templates/media-plex.yaml
@@ -39,7 +39,7 @@ spec:
         - name: 'app-template.ingress.main.hosts[0].paths[0].service.identifier'
           value: main
         - name: 'app-template.service.main.loadBalancerIP'
-          value: '&lbip {{ .Values.network.plexIP }}'
+          value: '{{ .Values.network.plexIP }}'
   syncPolicy:
     automated:
       selfHeal: true
