--- a/charts/plex/values.yaml
+++ b/charts/plex/values.yaml
@@ -21,9 +21,8 @@ app-template:
 
   service:
     main:
-      loadBalancerIP: &lbip 10.0.0.1
       annotations:
-        metallb.universe.tf/loadBalancerIPs: &lbip 10.0.0.1
+        metallb.universe.tf/loadBalancerIPs: 10.0.0.1
       type: LoadBalancer
       controller: main
       ports:
