--- a/charts/sabnzbd/values.yaml
+++ b/charts/sabnzbd/values.yaml
@@ -1,7 +1,4 @@
 app-template:
-  defaultPodOptions:
-    hostname: sabnzbd
-
   controllers:
     main:
       type: statefulset
@@ -9,6 +6,24 @@ app-template:
         reloader.stakater.com/auto: "true"
       labels:
         kasten/backup: "true"
+      initContainers:
+        config-fix:
+          name: config-fix
+          image: registry.hub.docker.com/library/alpine:3.19.1
+          #command: ["find", "/config", "-not", "-user", "1000", "-or", "-not", "-group", "1000", "-exec", "chown", "1000:1000", "{}", "+"]
+          command: ["sed", "-ei", '"s/^host_whitelist.*/host_whitelist = HOSTNAME/"', "/config/sabnzbd.ini"]
+          env:
+            HOSTNAME: HOSTNAME
+          securityContext:
+            readOnlyRootFilesystem: true
+            capabilities:
+              drop: ["all"]
+              add: ["CHOWN"]
+            runAsUser: 0
+            runAsNonRoot: false
+          volumeMounts:
+          - name: config
+            mountPath: /config
       containers:
         main:
           image:
