--- a/charts/sabnzbd/values.yaml
+++ b/charts/sabnzbd/values.yaml
@@ -7,7 +7,7 @@ app-template:
       labels:
         kasten/backup: "true"
       initContainers:
-      -   name: config-fix
+        config-fix:
           image: registry.hub.docker.com/library/alpine:3.19.1
           #command: ["find", "/config", "-not", "-user", "1000", "-or", "-not", "-group", "1000", "-exec", "chown", "1000:1000", "{}", "+"]
           command: ["sed", "-ei", '"s/^host_whitelist.*/host_whitelist = HOSTNAME/"', "/config/sabnzbd.ini"]
