--- a/charts/sabnzbd/values.yaml
+++ b/charts/sabnzbd/values.yaml
@@ -61,6 +61,8 @@ app-template:
     config:
       enabled: true
       existingClaim: sabnzbd-config
+      globalMounts:
+        - path: /config
 
     data:
       enabled: true
