--- a/charts/sabnzbd/values.yaml
+++ b/charts/sabnzbd/values.yaml
@@ -12,7 +12,7 @@ app-template:
             repository: registry.hub.docker.com/library/alpine
             tag: 3.19.1
           #command: ["find", "/config", "-not", "-user", "1000", "-or", "-not", "-group", "1000", "-exec", "chown", "1000:1000", "{}", "+"]
-          command: ["sh", "-c", '[-e /config/sabnzbd.ini ] && sed -i "s/^host_whitelist.*/host_whitelist = $HOSTNAME/" /config/sabnzbd.ini']
+          command: ["sh", "-c", 'if test -f /config/sabnzbd.ini; then sed -i "s/^host_whitelist.*/host_whitelist = $HOSTNAME/" /config/sabnzbd.ini; fi']
           env:
             HOSTNAME: HOSTNAME
           securityContext:
