--- a/charts/nmstate-config/templates/nmstate.yaml
+++ b/charts/nmstate-config/templates/nmstate.yaml
@@ -3,3 +3,42 @@ kind: NMState
 metadata:
   name: nmstate
 spec: {}
+# ---
+# apiVersion: nmstate.io/v1
+# kind: NodeNetworkConfigurationPolicy
+# metadata:
+#   name: ovs-br1-second-nic 
+# spec:
+#   desiredState:
+#     interfaces:
+#     - name: ovs-br1 
+#       description: |-
+#         A dedicated OVS bridge with enp4s0 as a port
+#         allowing all VLANs and untagged traffic
+#       type: ovs-bridge
+#       state: up
+#       bridge:
+#         options:
+#           stp: true
+#         port:
+#         - name: enp4s0 
+#     ovn:
+#       bridge-mappings:
+#       - localnet: localnet2 
+#         bridge: ovs-br1 
+#         state: present
+# ---
+# apiVersion: k8s.cni.cncf.io/v1
+# kind: NetworkAttachmentDefinition
+# metadata:
+#   name: localnet-network
+#   namespace: default
+# spec:
+#   config: |2
+#     {
+#             "cniVersion": "0.3.1", 
+#             "name": "localnet2", 
+#             "type": "ovn-k8s-cni-overlay", 
+#             "topology": "localnet", 
+#             "netAttachDefName": "default/localnet-network" 
+#     }
