--- a/charts/readarr/templates/data-volume.yaml
+++ b/charts/readarr/templates/data-volume.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: readarr-data-volume
+  labels:
+    app.kubernetes.io/instance={{ .Release.Name }}
 spec:
   storageClassName: ""
   capacity:
