--- a/deploy/dev/templates/downloading-sabnzbd.yaml
+++ b/deploy/dev/templates/downloading-sabnzbd.yaml
@@ -42,6 +42,7 @@ spec:
           value: main
   syncPolicy:
     automated:
+    prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
