--- a/deploy/dev/templates/home-forecastle.yaml
+++ b/deploy/dev/templates/home-forecastle.yaml
@@ -26,6 +26,7 @@ spec:
           value: apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   syncPolicy:
     automated:
+    prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
