--- a/deploy/dev/templates/media-plex.yaml
+++ b/deploy/dev/templates/media-plex.yaml
@@ -42,6 +42,7 @@ spec:
           value: '{{ .Values.network.plexIP }}'
   syncPolicy:
     automated:
+    prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
