--- a/deploy/dev/templates/media-radarr.yaml
+++ b/deploy/dev/templates/media-radarr.yaml
@@ -40,6 +40,7 @@ spec:
           value: main
   syncPolicy:
     automated:
+    prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
