--- a/deploy/dev/templates/home-hajimari.yaml
+++ b/deploy/dev/templates/home-hajimari.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: home-forecastle
+  name: home-hajimari
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: default
+    namespace: hajimari
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/forecastle
+    path: charts/hajimari
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
@@ -22,8 +22,12 @@ spec:
           value: {{ .Values.cluster.name }}
         - name: cluster.admin_email
           value: {{ .Values.cluster.admin_email }}
-        - name: 'forecastle.forecastle.route.host'
-          value: apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+        - name: app-template.controllers.main.containers.main.env.TZ
+          value: {{ .Values.cluster.timezone }}
+        - name: media.nfs.server
+          value: {{ .Values.media.nfs.server }}
+        - name: media.nfs.path
+          value: {{ .Values.media.nfs.path }}
   syncPolicy:
     automated:
       prune: true
