--- a/charts/hajimari/templates/config-volume.yaml
+++ b/charts/hajimari/templates/config-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: tautulli-config
+  name: hajimari-config
 spec:
   accessModes:
     - ReadWriteOnce
