--- a/charts/hajimari/values.yaml
+++ b/charts/hajimari/values.yaml
@@ -17,7 +17,7 @@ app-template:
             TZ: TIMEZONE
 
   serviceAccount:
-    name: tautulli-sa
+    name: hajimari-sa
 
   service:
     main:
@@ -29,13 +29,7 @@ app-template:
   persistence:
     config:
       enabled: true
-      existingClaim: tautulli-config
-
-    data:
-      enabled: true
-      existingClaim: tautulli-data-volume
-      globalMounts:
-        - path: /data
+      existingClaim: hajimari-config
 
   defaultPodOptions:
     securityContext:
