--- a/charts/hajimari/values.yaml
+++ b/charts/hajimari/values.yaml
@@ -38,39 +38,12 @@ app-template:
         - 100
         - 65535
 
-  hajimari:
-    defaultEnable: true
-    theme: null
-    lightTheme: gazette
-    darkTheme: blackboard
-    showGreeting: false
-    showAppGroups: true
-    showAppInfo: true
-    showAppUrls: false
-    showBookmarkGroups: true
-    targetBlank: false
-    name: "friend"
-#   customApps:
-#     - group: Media
-#       apps:
-#       - name: Synology
-#         url: http://nas.ullberg.family:5000
-#         icon: nas
-#         info: "Network attached storage"
-    globalBookmarks:
-      - group: Communicate
-        bookmarks:
-          - name: Reddit
-            url: "https://old.reddit.com"
-          - name: Zoho email
-            url: "https://mail.zoho.com"
-      - group: Media
-        bookmarks:
-          - name: Plex
-            url: "https://plex.tv/desktop/"
-          - name: Netflix
-            url: "https://netflix.com"
-          - name: Amazon Video
-            url: "https://www.amazon.com/gp/video/storefront/"
-          - name: Spotify
-            url: "https://browse.spotify.com"
+  persistence:
+    config:
+      enabled: true
+      type: configMap
+      name: hajimari-config
+      globalMounts:
+        - path: /config/config.yaml
+          subPath: config.yaml
+          readOnly: true
