--- a/deploy/cluster-bootstrap/templates/cluster-democratic-csi-snapshot-controller.yaml
+++ b/deploy/cluster-bootstrap/templates/cluster-democratic-csi-snapshot-controller.yaml
@@ -1,25 +1,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-k10-kasten-operator
+  name: cluster-democratic-csi-snapshot-controller
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: default
+    namespace: democratic-csi
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/k10-kasten-operator
+    path: charts/democratic-csi-snapshot-controller
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
-    helm:
-      parameters:
-        - name: backup.nfs.server
-          value: {{ .Values.backup.nfs.server }}
-        - name: backup.nfs.path
-          value: {{ .Values.backup.nfs.path }}
   syncPolicy:
     automated:
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
