--- a/deploy/cluster-bootstrap/templates/cluster-metallb-config.yaml
+++ b/deploy/cluster-bootstrap/templates/cluster-metallb-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-k10-kasten-operator
+  name: cluster-metallb-config
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -11,15 +11,17 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/k10-kasten-operator
+    path: charts/metallb-config
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
       parameters:
-        - name: backup.nfs.server
-          value: {{ .Values.backup.nfs.server }}
-        - name: backup.nfs.path
-          value: {{ .Values.backup.nfs.path }}
+        - name: network.startIP
+          value: {{ .Values.network.startIP }}
+        - name: network.endIP
+          value: {{ .Values.network.endIP }}
+        - name: network.plexIP
+          value: {{ .Values.network.plexIP }}
   syncPolicy:
     automated:
       selfHeal: true
