--- a/deploy/cluster-bootstrap/templates/cluster-nginx-ingress-operator.yaml
+++ b/deploy/cluster-bootstrap/templates/cluster-nginx-ingress-operator.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-k10-kasten-operator
+  name: cluster-nginx-ingress-operator
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -11,15 +11,12 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/k10-kasten-operator
+    path: charts/nginx-ingress-operator
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
-      parameters:
-        - name: backup.nfs.server
-          value: {{ .Values.backup.nfs.server }}
-        - name: backup.nfs.path
-          value: {{ .Values.backup.nfs.path }}
   syncPolicy:
     automated:
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
