--- a/charts/k10-kasten-operator/templates/operatorgroup.yaml
+++ b/charts/k10-kasten-operator/templates/operatorgroup.yaml
@@ -1,8 +1,12 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  generateName: k10-kasten-
-  name: k10-kasten-cluster
+  generateName: kasten-io-
+  annotations:
+    olm.providedAPIs: 'K10.v1alpha1.apik10.kasten.io,K10restore.v1alpha1.apik10.kasten.io'
+  name: kasten-io-cluster
   namespace: kasten-io
 spec:
+  targetNamespaces:
+    - kasten-io
   upgradeStrategy: Default
