--- a/charts/cert-manager-operator/templates/operatorgroup.yaml
+++ b/charts/cert-manager-operator/templates/operatorgroup.yaml
@@ -5,4 +5,6 @@ metadata:
   name: cert-manager-operator-cluster
   namespace: cert-manager-operator
 spec:
+  targetNamespaces:
+    - cert-manager-operator
   upgradeStrategy: Default
