--- a/charts/plex/templates/config-volume.yaml
+++ b/charts/plex/templates/config-volume.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: synology-iscsi
+  storageClassName: {{ .Values.config.storageClassName }}
   resources:
     requests:
       storage: 15Gi
